[gd_scene load_steps=5 format=2]

[ext_resource path="res://double-pixel.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/InGameMenu.gd" type="Script" id=2]
[ext_resource path="res://double-pixel-small.tres" type="DynamicFont" id=3]

[sub_resource type="GradientTexture" id=1]

[node name="InGameMenu" type="Control"]
margin_left = 3.54234
margin_top = -0.622169
margin_right = 1923.54
margin_bottom = 1079.38
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 887.0
margin_top = 416.0
margin_right = 1033.0
margin_bottom = 664.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 896.136
margin_top = 425.846
margin_right = 1024.14
margin_bottom = 655.846
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenu" type="Label" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Game Menu"
align = 1

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "Menu"

[node name="Levels" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 128.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )
text = "Levels"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 128.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 128.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 775.599
margin_top = 411.642
margin_right = 1131.6
margin_bottom = 709.642
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog"]
margin_left = 40.3355
margin_top = 96.204
margin_right = 181.335
margin_bottom = 122.204
rect_pivot_offset = Vector2( 94.2896, 21.1536 )
custom_fonts/font = ExtResource( 3 )
text = "Full Screen"

[node name="Label2" type="Label" parent="PopupDialog"]
margin_left = 40.3355
margin_top = 131.204
margin_right = 181.335
margin_bottom = 157.204
rect_pivot_offset = Vector2( 94.2896, 21.1536 )
custom_fonts/font = ExtResource( 3 )
text = "Audio Volume"

[node name="CheckButton" type="CheckButton" parent="PopupDialog"]
margin_left = 253.253
margin_top = 89.204
margin_right = 329.253
margin_bottom = 129.204
focus_mode = 0
enabled_focus_mode = 0

[node name="HSlider" type="HSlider" parent="PopupDialog"]
margin_left = 181.335
margin_top = 138.204
margin_right = 319.335
margin_bottom = 154.204
min_value = 0.001
max_value = 10.0
step = 0.001
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="PopupDialog/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="PopupDialog/HSlider" to="." method="_on_HSlider_value_changed"]
